syntax = "proto3";

package grpc.bank;

option java_outer_classname = "BankGrpc";
option java_multiple_files = true;

message BankItem{
    int64 id = 1;
    string bankName = 2;
    string code = 3;
    string holderName = 4;
}